# oanda-rs

./: .env.example  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: endpoints.md  getting-started.md  rate-limiting.md  streaming.md  testing.md
examples/: candles.rs  list_accounts.rs  market_order.rs  pricing_stream.rs  transaction_stream.rs
src/: builder.rs  client.rs  error.rs  lib.rs  prelude.rs  progenitor_client.rs  rate_limit.rs  transport.rs  types.rs
src/endpoints/: accounts.rs  instruments.rs  mod.rs  orders.rs  positions.rs  pricing.rs  trades.rs  transactions.rs
src/models/: account.rs  instrument.rs  instrument_name.rs  macros.rs  mod.rs  order.rs  position.rs  pricing.rs  primitives.rs  serde_util.rs  trade.rs
src/models/transaction/: account_tx.rs  fill_cancel_tx.rs  misc_tx.rs  mod.rs  order_tx.rs
src/streaming/: json_lines.rs  managed.rs  mod.rs
src/types/: error.rs
tests/: accounts.rs  builders.rs  instruments.rs  live.rs  orders.rs  positions.rs  serde_roundtrip.rs  streaming.rs  trades.rs  transactions.rs
tests/common/: mod.rs
tests/fixtures/: orders.json  transactions.json
tools/: README.md  gen_model.py  schemadump.py
