[package]
name = "oanda-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
futures-core = "0.3"
bytes = "1.5"
percent-encoding = "2.3.1"
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_urlencoded = "0.7"
chrono = { version = "0.4", features = ["serde"] }
